--- a/MiSTer.ini
+++ b/MiSTer.ini
@@ -32,7 +32,10 @@ osd_timeout=30         ; 5-3600 timeout (in seconds) for OSD to disappear in Men
 video_off=0            ; output black frame in Menu core after timeout (is seconds). Valid only if osd_timout is non zero.
 osd_rotate=0           ; Display OSD menu rotated,  0 - no rotation, 1 - rotate right (+90°), 2 - rotate left (-90°)                  
 vga_sog=0              ; 1 - enable sync on green (needs analog I/O board v6.0 or newer).
-
+;loading_txt_up=1      ; Set to 1 to position the text on the top of the loading screen. Default is 0(bottom).
+;waiting_txt_up=1      ; Set to 1 to position the text on the top of the standby screen. Default is 0(bottom).
+;cfgcore_subfolder="MiSTer"      ; Uncomment to set the subfolder in config where the cores configuration will be by default.
+;cfgarcade_subfolder="Arcade"    ; Uncomment to set the subfolder in config where the arcade cores configuration will be by default. 
 
 ; 1 - enables the recent file loaded/mounted.
 ; WARNING: This option will enable write to SD card on every load/mount which may wear the SD card after many writes to the same place
